fixed url in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "brianjhuang.github.io/ds3-workshops23",
+  "homepage": "http://brianjhuang.github.io/ds3-workshops23",
   "name": "ds3-workshops23",
   "version": "0.1.0",
   "private": true,
