--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
     "gh-pages": "^4.0.0"
   }
 }
